--- a/archives/toutiao-search/2024-04-03.md
+++ b/archives/toutiao-search/2024-04-03.md
@@ -1,48 +1,73 @@
 # 2024-04-03
 
-共 123 条
+共 145 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 03 2024 08:25:18 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 03 2024 09:39:27 GMT+0800 (China Standard Time) -->
 1. [台湾7.3级地震 厦门杭州震感强烈](https://so.toutiao.com/search?keyword=台湾7.3级地震+厦门杭州震感强烈)
-1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
+1. [台湾强震全岛摇晃1分钟 整栋楼倾斜](https://so.toutiao.com/search?keyword=台湾强震全岛摇晃1分钟+整栋楼倾斜)
 1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
-1. [提灯定损事件追踪](https://so.toutiao.com/search?keyword=提灯定损事件追踪)
-1. [美财长耶伦4日起访华](https://so.toutiao.com/search?keyword=美财长耶伦4日起访华)
-1. [人大代表被政协委员撞死 家属发声](https://so.toutiao.com/search?keyword=人大代表被政协委员撞死+家属发声)
-1. [大V：提灯定损引网友愤怒的8个原因](https://so.toutiao.com/search?keyword=大V：提灯定损引网友愤怒的8个原因)
+1. [台湾7.3级强震是今年我国最强地震](https://so.toutiao.com/search?keyword=台湾7.3级强震是今年我国最强地震)
+1. [南昌打雷视频引恐慌 市民：加了特效](https://so.toutiao.com/search?keyword=南昌打雷视频引恐慌+市民：加了特效)
 1. [“731部队”词条在美国突然火了](https://so.toutiao.com/search?keyword=“731部队”词条在美国突然火了)
-1. [女孩参加朋友婚礼一眼相中伴郎](https://so.toutiao.com/search?keyword=女孩参加朋友婚礼一眼相中伴郎)
-1. [南昌3人坠亡 高层门窗安全谁负责](https://so.toutiao.com/search?keyword=南昌3人坠亡+高层门窗安全谁负责)
+1. [台湾地震：高楼被“整根拔起”](https://so.toutiao.com/search?keyword=台湾地震：高楼被“整根拔起”)
+1. [人大代表被政协委员撞死 家属发声](https://so.toutiao.com/search?keyword=人大代表被政协委员撞死+家属发声)
+1. [直击台湾地震现场](https://so.toutiao.com/search?keyword=直击台湾地震现场)
+1. [日本发布海啸警报](https://so.toutiao.com/search?keyword=日本发布海啸警报)
 1. [李若彤回应58岁未婚未育](https://so.toutiao.com/search?keyword=李若彤回应58岁未婚未育)
 1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
-1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
-1. [南昌高校遭狂风暴雨 男生合力堵门](https://so.toutiao.com/search?keyword=南昌高校遭狂风暴雨+男生合力堵门)
-1. [车主在撞前车和撞护栏间纠结了一下](https://so.toutiao.com/search?keyword=车主在撞前车和撞护栏间纠结了一下)
-1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
-1. [111岁开国少将张力雄逝世](https://so.toutiao.com/search?keyword=111岁开国少将张力雄逝世)
-1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
-1. [伊朗最高领袖：以色列将受到惩罚](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将受到惩罚)
-1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
+1. [刘若英提醒小心余震](https://so.toutiao.com/search?keyword=刘若英提醒小心余震)
+1. [媒体：上饶应直面提灯定损讹诈质疑](https://so.toutiao.com/search?keyword=媒体：上饶应直面提灯定损讹诈质疑)
+1. [南昌3人坠亡 高层门窗安全谁负责](https://so.toutiao.com/search?keyword=南昌3人坠亡+高层门窗安全谁负责)
+1. [自然资源部发布海啸Ⅰ级警报](https://so.toutiao.com/search?keyword=自然资源部发布海啸Ⅰ级警报)
+1. [提灯定损事件追踪](https://so.toutiao.com/search?keyword=提灯定损事件追踪)
+1. [临时变道引发事故 司机竟扬长而去](https://so.toutiao.com/search?keyword=临时变道引发事故+司机竟扬长而去)
+1. [台湾花莲县海域发生6.0级地震](https://so.toutiao.com/search?keyword=台湾花莲县海域发生6.0级地震)
+1. [网友调侃新成语《提灯定损》](https://so.toutiao.com/search?keyword=网友调侃新成语《提灯定损》)
 1. [俄多名女子街头上演全裸派对](https://so.toutiao.com/search?keyword=俄多名女子街头上演全裸派对)
+1. [女孩参加朋友婚礼一眼相中伴郎](https://so.toutiao.com/search?keyword=女孩参加朋友婚礼一眼相中伴郎)
+1. [南昌高校遭狂风暴雨 男生合力堵门](https://so.toutiao.com/search?keyword=南昌高校遭狂风暴雨+男生合力堵门)
+1. [清明节发源地](https://so.toutiao.com/search?keyword=清明节发源地)
+1. [专家解读：伊朗以色列为何反目成仇](https://so.toutiao.com/search?keyword=专家解读：伊朗以色列为何反目成仇)
+1. [大车跟车过近追尾前车负全责](https://so.toutiao.com/search?keyword=大车跟车过近追尾前车负全责)
+1. [车主在撞前车和撞护栏间纠结了一下](https://so.toutiao.com/search?keyword=车主在撞前车和撞护栏间纠结了一下)
+1. [以色列与亲伊朗武装冲突会否升级](https://so.toutiao.com/search?keyword=以色列与亲伊朗武装冲突会否升级)
+1. [111岁开国少将张力雄逝世](https://so.toutiao.com/search?keyword=111岁开国少将张力雄逝世)
+1. [广铁部分铁路因台地震临时封锁](https://so.toutiao.com/search?keyword=广铁部分铁路因台地震临时封锁)
+1. [大V：提灯定损引网友愤怒的8个原因](https://so.toutiao.com/search?keyword=大V：提灯定损引网友愤怒的8个原因)
+1. [大熊猫福宝装笼训练最新视频曝光](https://so.toutiao.com/search?keyword=大熊猫福宝装笼训练最新视频曝光)
+1. [7省区将有雷暴大风或冰雹](https://so.toutiao.com/search?keyword=7省区将有雷暴大风或冰雹)
+1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
+1. [俄罗斯为何重启“超级炸弹”生产](https://so.toutiao.com/search?keyword=俄罗斯为何重启“超级炸弹”生产)
 1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
-1. [景区回应男子洞房体验3分钟收168](https://so.toutiao.com/search?keyword=景区回应男子洞房体验3分钟收168)
-1. [C罗连场戴帽 利雅得胜利大胜艾卜哈](https://so.toutiao.com/search?keyword=C罗连场戴帽+利雅得胜利大胜艾卜哈)
+1. [伊朗最高领袖：以色列将受到惩罚](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将受到惩罚)
 1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
-1. [文旅部门调查游客被拖进洞房事件](https://so.toutiao.com/search?keyword=文旅部门调查游客被拖进洞房事件)
+1. [农贸市场被承包后租金上涨引冲突](https://so.toutiao.com/search?keyword=农贸市场被承包后租金上涨引冲突)
+1. [媒体调查“骨灰房”现象](https://so.toutiao.com/search?keyword=媒体调查“骨灰房”现象)
+1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
+1. [景区回应男子洞房体验3分钟收168](https://so.toutiao.com/search?keyword=景区回应男子洞房体验3分钟收168)
+1. [LV老板登顶福布斯全球亿万富豪榜](https://so.toutiao.com/search?keyword=LV老板登顶福布斯全球亿万富豪榜)
+1. [中国夫妇在刚果（金）遇袭致一死](https://so.toutiao.com/search?keyword=中国夫妇在刚果（金）遇袭致一死)
+1. [电动车相撞倒地两人姿势一致等交警](https://so.toutiao.com/search?keyword=电动车相撞倒地两人姿势一致等交警)
 1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
-1. [狗把人咬进了医院 狗主人却不出面](https://so.toutiao.com/search?keyword=狗把人咬进了医院+狗主人却不出面)
+1. [亲历南昌雷暴大风天气的大学生发声](https://so.toutiao.com/search?keyword=亲历南昌雷暴大风天气的大学生发声)
+1. [一线城市楼市复苏程度好于二三线](https://so.toutiao.com/search?keyword=一线城市楼市复苏程度好于二三线)
 1. [安徽一村民自费安装64盏路灯](https://so.toutiao.com/search?keyword=安徽一村民自费安装64盏路灯)
 1. [江西又现租客退房纠纷事件](https://so.toutiao.com/search?keyword=江西又现租客退房纠纷事件)
+1. [美财长耶伦4日起访华](https://so.toutiao.com/search?keyword=美财长耶伦4日起访华)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
+1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
+1. [C罗连场戴帽 利雅得胜利大胜艾卜哈](https://so.toutiao.com/search?keyword=C罗连场戴帽+利雅得胜利大胜艾卜哈)
+1. [文旅部门调查游客被拖进洞房事件](https://so.toutiao.com/search?keyword=文旅部门调查游客被拖进洞房事件)
+1. [狗把人咬进了医院 狗主人却不出面](https://so.toutiao.com/search?keyword=狗把人咬进了医院+狗主人却不出面)
 1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
 1. [开封王婆成立相亲婚介所](https://so.toutiao.com/search?keyword=开封王婆成立相亲婚介所)
 1. [三亚收费摄影师殴打免费给人拍照者](https://so.toutiao.com/search?keyword=三亚收费摄影师殴打免费给人拍照者)
 1. [台湾青年登上港珠澳大桥](https://so.toutiao.com/search?keyword=台湾青年登上港珠澳大桥)
 1. [老公不上班 女子挣钱养家绝望自杀](https://so.toutiao.com/search?keyword=老公不上班+女子挣钱养家绝望自杀)
 1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
-1. [网友调侃新成语《提灯定损》](https://so.toutiao.com/search?keyword=网友调侃新成语《提灯定损》)
 1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
-1. [中国夫妇在刚果（金）遇袭致一死](https://so.toutiao.com/search?keyword=中国夫妇在刚果（金）遇袭致一死)
 1. [马英九向孙中山铜像鞠躬致敬](https://so.toutiao.com/search?keyword=马英九向孙中山铜像鞠躬致敬)
 1. [南昌极端天气：乌云压境压迫感强](https://so.toutiao.com/search?keyword=南昌极端天气：乌云压境压迫感强)
 1. [王婆说媒启动预约实名制](https://so.toutiao.com/search?keyword=王婆说媒启动预约实名制)
@@ -50,7 +75,6 @@
 1. [南昌3人坠亡小区开发商曾涉贪腐大案](https://so.toutiao.com/search?keyword=南昌3人坠亡小区开发商曾涉贪腐大案)
 1. [大连星海湾大桥建设方被罚2700万](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万)
 1. [韩国饲养员：谢谢福宝来到我身边](https://so.toutiao.com/search?keyword=韩国饲养员：谢谢福宝来到我身边)
-1. [媒体：上饶应直面提灯定损讹诈质疑](https://so.toutiao.com/search?keyword=媒体：上饶应直面提灯定损讹诈质疑)
 1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
 1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
 1. [提灯定损房屋或涉违建？官方回应](https://so.toutiao.com/search?keyword=提灯定损房屋或涉违建？官方回应)
@@ -65,14 +89,12 @@
 1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
 1. [以色列炸平伊朗使馆 更多细节流出](https://so.toutiao.com/search?keyword=以色列炸平伊朗使馆+更多细节流出)
 1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
-1. [大车跟车过近追尾前车负全责](https://so.toutiao.com/search?keyword=大车跟车过近追尾前车负全责)
 1. [救援队携大功率龙吸水处置南昌险情](https://so.toutiao.com/search?keyword=救援队携大功率龙吸水处置南昌险情)
 1. [马英九：两岸共同合作振兴中华](https://so.toutiao.com/search?keyword=马英九：两岸共同合作振兴中华)
 1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
 1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
 1. [中方：菲律宾在南海问题上背弃承诺](https://so.toutiao.com/search?keyword=中方：菲律宾在南海问题上背弃承诺)
 1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
-1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
 1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
 1. [记者质疑美方：军火是助以色列自卫吗](https://so.toutiao.com/search?keyword=记者质疑美方：军火是助以色列自卫吗)
 1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
